@@ -1,3 +1,9 @@
+2008-10-31  Badlop  <badlop@process-one.net>
+
+	* src/mod_admin_extra.erl: Deleted the duplicated command
+	delete_older_messages (EJAB-814). Rename the other delete_older_*
+	commands.
+
 2008-10-12  Badlop  <badlop@process-one.net>
 
 	* README.txt: It requires ejabberd trunk SVN 1635 or newer
